2005-07-11  Srinivasa Ragavan <sragavan@novell.com>
	* gui/dialogs/comp-editor.c:(get_attachment_list) (attachment_bar_changed_cb)
	(attachment_bar_icon_clicked_cb) (cab_popups_free) (setup_widgets)
	(set_attachment_list) (comp_editor_get_mime_attach_list)
	Fixed huge memory leak, and come compile warnings. Also fixed
	a crash, when double click on attachments.
	
2005-07-11  Srinivasa Ragavan <sragavan@novell.com>

	* gui/itip-utils.[ch]: Added a structure.
	* gui/dialogs/Makefile.am: Removed cal-attachment*
	* gui/dialogs/comp-editor.[ch]: (attach_message) (drop_action)
	(send_timezone) (save_comp) (response_cb) (delete_event_cb) 
	(attachment_bar_changed_cb) (attachment_bar_icon_clicked_cb)
	(setup_widgets) (set_icon_from_comp) (fill_widgets) (real_edit_comp)
	Removed the attachment bar specific to calendar and made a merged
	one at widgets/misc/e-attachment*

2005-07-11  Chenthill Palanisamy  <pchenthill@novell.com>

	* conduits/calendar/calendar-conduit.c: (process_multi_day),
	(delete_record):
	* gui/dialogs/comp-editor.c: (save_comp), (delete_comp):
	* gui/e-calendar-view.c: (e_calendar_view_cut_clipboard),
	(delete_event), (transfer_item_to):
	* gui/e-itip-control.c: (remove_item):
	* gui/gnome-cal.c: (gnome_calendar_purge):
	* gui/dialogs/meeting-page.c: (meeting_page_construct): Use 
	e_cal_remove_with_mod for removing recurring apppointment and call
       	e_cal_remove_object for non-recurring ones.
	* gui/itip-utils.c: (itip_organizer_is_user),
	(itip_get_comp_attendee): Fixed some memory leaks.

2005-07-07  Veerapuram Varadhan <vvaradhan@novell.com>

	* gui/calendar-component.c: (impl_handleURI): Added support for
	opening a calendar-item in the editor when its source-UID and UID/RID
	is passed in the command-line.
	* gui/gnome-cal.[c,h]: (gnome_calendar_edit_appointment): Newly added
	for the above functionality.
	
2005-07-06  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/dialogs/event-page.c: (sensitize_widgets): Enable alarms